--- a/demo/index.html
+++ b/demo/index.html
@@ -1,17 +1,6 @@
 <html>
   <head>
-    <!-- This is the future but not yet supported by browsers -->
-    <!-- <script type="importmap" src="importmap.js"></script> -->
-    <!-- <script type="module" src="index.js"></script> -->
-
-    <script type="systemjs-importmap" src="importmap.json"></script>
-    <script src="node_modules/systemjs/dist/system.js"></script>
-    <script src="node_modules/systemjs/dist/extras/transform.js"></script>
-    <script src="node_modules/systemjs-transform-babel/dist/babel-transform.js"></script>
-
-    <script>
-      System.import('./src/index.js');
-    </script>
+    <script type="module" src="./src/index.js"></script>
   </head>
 
   <body>
